--- a/src/views/sections/pronto.pug
+++ b/src/views/sections/pronto.pug
@@ -6,7 +6,7 @@
             .soon-section__content
                 .row 
                     .col-sm-6 
-                        h4 My pronto
+                        h4 Muy pronto
                     .col-sm-6 
                 .row 
                     .col-sm-3 
