--- a/src/styles/scss/composicion.scss
+++ b/src/styles/scss/composicion.scss
@@ -22,7 +22,7 @@
 
             .blue-section {
                 background: rgb(0,36,68);
-                background: linear-gradient(90deg, rgba(0,36,68,1) 0%, rgba(2,44,83,1) 35%, rgba(8,82,182,1) 100%); 
+                background: linear-gradient( 90deg, #002046 18%, #022c53 50%, #002e5f 100%);
                 width: 100%;
                 height: 400px;
                 padding: 6rem 0;
